# n01d-forge

./: Cargo.toml  LICENSE  README.md  n01d-forge.desktop
.github/: FUNDING.yml
.github/workflows/: release.yml
docs/wiki/: Home.md
public/: index.html
src/: main.rs  theme.rs  ui.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: drives.rs  encryption.rs  main.rs  secure_erase.rs
