[package]
name = "n01d-forge"
version = "1.0.0"
description = "Secure Cross-Platform Image Burner with AES-256 Encryption - Write ISOs to USB drives with optional encryption"
authors = ["bad-antics <bad-antics@nullsec.dev>"]
license = "MIT"
repository = "https://github.com/bad-antics/n01d-forge"
homepage = "https://github.com/bad-antics/n01d-forge"
documentation = "https://docs.rs/n01d-forge"
readme = "README.md"
edition = "2021"
keywords = ["usb", "image-burner", "encryption", "iso", "security"]
categories = ["command-line-utilities", "cryptography", "hardware-support"]
exclude = ["target/*", "Cargo.lock", ".github/*"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
eframe = "0.27"
egui = "0.27"
tokio = { version = "1", features = ["full", "sync"] }
sha2 = "0.10"
md5 = "0.7"
hex = "0.4"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
sysinfo = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.14"
directories = "5"
env_logger = "0.11"
log = "0.4"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", features = ["fs", "mount"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.54", features = ["Win32_Storage_FileSystem", "Win32_System_Ioctl"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[[bin]]
name = "n01d-forge"
path = "src/main.rs"
