[package]
name = "n01d-forge"
version = "1.0.0"
description = "Secure Cross-Platform Image Burner with Encryption"
authors = ["NullSec Team"]
license = "MIT"
repository = "https://github.com/bad-antics/n01d-forge"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "dialog-all", "fs-all", "path-all", "process-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"
indicatif = "0.17"
ring = "0.17"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.21"
tempfile = "3"
walkdir = "2"
chrono = "0.4"
sysinfo = "0.30"
serialport = "4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
